fix: 6 architectural issues found in deep review (vs. papers + open-source patterns)
Critical:
- A1: All 3 skill contracts hardcoded supported_agents to [codex, windsurf,
  antigravity] — new IDEs (cursor, kiro) were filtered out by _eligible().
  This DIRECTLY contradicted the IDE-agnostic design.
  Fix: supported_agents: [] (empty = any IDE can run any skill)

- A2: No task collision protection — starting a second task silently
  overwrote inbox/TASK.md of the first, corrupting its state.
  Fix: go command now checks for active tasks and prompts for confirmation.
  Also clears stale inbox/outbox before starting (A6 fix).

Important:
- A3: Timeout was tracked (started_at) but NEVER enforced — contract's
  timeout.run_sec was a dead letter. Violates Agentless 'bounded execution'.
  Fix: build_node checks elapsed time after interrupt resumes.

- A4: quality_gates declared in contract but build_node never validated
  check_results — builder could submit empty results and pass.
  Violates MapCoder 'verification stage' design.
  Fix: build_node now checks all gates, adds gate_warnings to reviewer context.

- A5: watcher.py was dead code (OutboxPoller defined but never used).
  Fix: Added 'ma watch' command that polls outbox and auto-submits.

- A6: go command didn't clear previous task's inbox/outbox residual files.
  Fix: Clears builder and reviewer inbox/outbox before starting new task.

51 tests passed, full E2E verified including:
- kiro as builder + cursor as reviewer (new IDE combo)
- Task collision protection (blocks second go while first is active)
- Task completion marking (status: approved written to YAML)

--- a/skills/code-implement/contract.yaml
+++ b/skills/code-implement/contract.yaml
@@ -39,10 +39,9 @@ fallback:
   on_failure: retry
 compatibility:
   min_orchestrator_version: 0.1.0
-  supported_agents:
-    - codex
-    - windsurf
-    - antigravity
+  # supported_agents intentionally empty — any IDE can run this skill
+  # Add specific IDs here only if a skill truly requires a specific IDE
+  supported_agents: []
 handoff:
   artifact_path: artifacts/${task_id}/
   required_fields:
