feat: hybrid driver architecture — CLI agents auto-spawn, IDE agents file-based
ARCHITECTURE: Two driver modes for agent execution:

1. CLI driver (driver: cli) — FULLY AUTOMATED
   - Claude Code: claude -p 'Read TASK.md...' --allowedTools Read,Edit,Bash
   - Codex CLI: codex exec 'Read TASK.md...' --full-auto
   - Aider: aider --message 'Read TASK.md...' --yes
   - Orchestrator spawns CLI tool in background thread
   - CLI tool reads TASK.md, does work, writes outbox JSON
   - Watcher detects outbox → resumes graph (same as before)
   - User experience: ma go → fully automatic → done

2. File driver (driver: file) — MANUAL (current behavior)
   - Windsurf, Cursor, Kiro, Antigravity
   - Write TASK.md → show instructions → user tells IDE
   - Watcher detects outbox → resumes graph

KEY INSIGHT: Graph unchanged! TASK.md already contains all instructions.
Only difference is WHO writes to outbox — CLI tool or human-directed IDE.

New files:
- src/multi_agent/driver.py: spawn_cli_agent, get_agent_driver, JSON extraction
- tests/test_driver.py: 11 tests (driver lookup, JSON extract, spawn, timeout)

Modified:
- agents.yaml: added driver/command fields, claude/aider agents
- schema.py: AgentProfile.driver + AgentProfile.command
- cli.py: _show_waiting + watch loop auto-spawn CLI agents

88 tests passed (77 + 11 driver tests).

--- a/agents/agents.yaml
+++ b/agents/agents.yaml
@@ -3,27 +3,48 @@
 # Map your IDE tools to roles. You can use ANY IDE here.
 # The system only cares about roles (builder, reviewer), not IDE names.
 #
-# Examples:
-#   - windsurf, cursor, kiro, codex, antigravity, copilot, aider, cline, ...
+# driver: how to invoke the agent
+#   "file"  — write TASK.md, user manually tells IDE (default)
+#   "cli"   — spawn CLI tool automatically (fully automated)
 #
-# To add a new IDE, just add it here. No code changes needed.
+# command: CLI command template (only for driver: cli)
+#   Use {task_file} as placeholder for TASK.md path
+#   Use {outbox_file} as placeholder for outbox JSON path
+#
+# To add a new IDE/tool, just add it here. No code changes needed.
 
 version: 2
 
 agents:
   - id: windsurf
+    driver: file
     capabilities: [planning, implementation, testing, docs]
     
   - id: cursor
+    driver: file
     capabilities: [planning, implementation, testing, review, docs]
     
+  - id: claude
+    driver: cli
+    command: "claude -p 'Read {task_file} and complete the task. Save the JSON output to {outbox_file}' --allowedTools Read,Edit,Bash,Write --output-format text"
+    capabilities: [planning, implementation, testing, review, docs, security]
+
   - id: codex
+    driver: cli
+    command: "codex exec 'Read {task_file} and complete the task. Save the JSON output to {outbox_file}' --full-auto"
     capabilities: [planning, implementation, testing, review, docs]
 
+  - id: aider
+    driver: cli
+    command: "aider --message 'Read {task_file} and complete the task. Save the JSON output to {outbox_file}' --yes"
+    capabilities: [planning, implementation, testing, review]
+
   - id: antigravity
+    driver: file
     capabilities: [planning, implementation, review, security]
 
   - id: kiro
+    driver: file
     capabilities: [planning, implementation, testing, review]
 
 # Role assignment strategy:
